force-app/main/default/objects/Onboarding_Attempt__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>The date when the Onboarding Attempt was moved to either Canceled or Closed status.</description>
    <inlineHelpText>The date when the Onboarding Attempt was moved to either Canceled or Closed status.</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>