force-app/main/default/objects/Onboarding_Attempt__c/fields/Combined_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Combined_Funnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combined Funnel</label>
    <referenceTo>Combined_Funnel__c</referenceTo>
    <relationshipLabel>Onboarding Attempts</relationshipLabel>
    <relationshipName>Onboarding_Attemps</relationshipName>
    <type>Lookup</type>
</CustomField>