force-app/main/default/objects/Onboarding_Attempt__c/fields/Combined_Funnel_Owner__c.field-meta.xml
<CustomField>
    <fullName>Combined_Funnel_Owner__c</fullName>
    <formula>IF(
 Combined_Funnel__r.OwnerId  = &quot;00G3u000002aqp3&quot;,
&quot;Self Serve Onboarding Queue&quot;,
  Combined_Funnel__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Combined_Funnel__r.Owner:User.LastName  
    )</formula>
    <label>Combined Funnel Owner</label>
    <type>Text</type>
</CustomField>