force-app/main/default/objects/Onboarding_Attempt__c/fields/Combined_Funnel_Owner_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Combined_Funnel_Owner_Stamp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combined Funnel Owner - Stamp</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Attempts3</relationshipName>
    <type>Lookup</type>
</CustomField>