force-app/main/default/objects/Onboarding_Attempt__c/fields/Date_of_Billing_Override_Denial__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Billing_Override_Denial__c</fullName>
    <description>When the Billing Override Approved by Manager field on a Combined Funnel is updated to No, the automation will find the respective In Progress Onboarding Attempt and update it with today’s date.</description>
    <inlineHelpText>When the Billing Override Approved by Manager field on a Combined Funnel is updated to No, the automation will find the respective In Progress Onboarding Attempt and update it with today’s date.</inlineHelpText>
    <label>Date of Billing Override Denial</label>
    <type>Date</type>
</CustomField>