force-app/main/default/objects/Onboarding_Attempt__c/fields/Date_of_SaaS_Override__c.field-meta.xml
<CustomField>
    <fullName>Date_of_SaaS_Override__c</fullName>
    <description>When the SaaS Override Approved by Manager field on a Combined Funnel is updated to Yes, the automation will find the respective In Progress Onboarding Attempt and update it with today’s date.</description>
    <inlineHelpText>When the SaaS Override Approved by Manager field on a Combined Funnel is updated to Yes, the automation will find the respective In Progress Onboarding Attempt and update it with today’s date.</inlineHelpText>
    <label>Date of SaaS Override</label>
    <type>Date</type>
</CustomField>