force-app/main/default/objects/Onboarding_Attempt__c/fields/Days_Since_Closed_Won_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Closed_Won_Stamp__c</fullName>
    <label>Days Since Closed Won - Stamp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>