force-app/main/default/objects/Onboarding_Attempt__c/fields/Days_since_CW__c.field-meta.xml
<CustomField>
    <fullName>Days_since_CW__c</fullName>
    <formula>IF(NOT(ISBLANK(Days_Since_Closed_Won_Stamp__c )),
Days_Since_Closed_Won_Stamp__c,
 Account__r.Days_Since_Closed_Won__c  )</formula>
    <label>Days since CW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>