force-app/main/default/objects/Onboarding_Attempt__c/fields/Days_to_Activate_from_CW__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activate_from_CW__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Days_to_Activate_from_CW_Stamp__c,
IF(NOT(ISBLANK( Days_to_Activate_from_CW_Stamp__c )),
Days_to_Activate_from_CW_Stamp__c,
 Account__r.Days_to_Activate_from_CW__c  ) 
)</formula>
    <label># Days to Activate from CW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>