force-app/main/default/objects/Onboarding_Attempt__c/fields/Days_to_Activate_from_CW_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activate_from_CW_Stamp__c</fullName>
    <label># Days to Activate from CW - Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>