force-app/main/default/objects/Onboarding_Attempt__c/fields/Initial_Setup_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_Call_Completed__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Initial_Setup_Call_Completed_Stamp__c,
IF(NOT(ISBLANK(Initial_Setup_Call_Completed_Stamp__c  )),
Initial_Setup_Call_Completed_Stamp__c ,
 Combined_Funnel__r.Reference_Initial_Setup_Call_Completed__c   )
)</formula>
    <label>Initial Setup Call Completed</label>
    <type>Date</type>
</CustomField>