force-app/main/default/objects/Onboarding_Attempt__c/fields/Initial_Setup_Call_Scheduled_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_Call_Scheduled_Stamp__c</fullName>
    <label>Initial Setup Call Scheduled - Stamp</label>
    <type>Date</type>
</CustomField>