force-app/main/default/objects/Onboarding_Attempt__c/fields/Number_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sites__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Number_of_Sites_Stamp__c,
IF(NOT(ISBLANK( Number_of_Sites_Stamp__c )),
Number_of_Sites_Stamp__c ,
 Account__r.School_Object__r.Number_of_Sites__c  )
)</formula>
    <label>Number of Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>