force-app/main/default/objects/Onboarding_Attempt__c/fields/Number_of_Sites_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sites_Stamp__c</fullName>
    <label>Number of Sites - Stamp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>