force-app/main/default/objects/Onboarding_Attempt__c/fields/OB_Attempt_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>OB_Attempt_Record_Type__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>OB Attempt Record Type</label>
    <type>Text</type>
</CustomField>