force-app/main/default/objects/Onboarding_Attempt__c/fields/of_Students_at_Bill_Activation_Stamp__c.field-meta.xml
<CustomField>
    <fullName>of_Students_at_Bill_Activation_Stamp__c</fullName>
    <label># of Students at Bill Activation - Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>