force-app/main/default/objects/Onboarding_Attempt__c/fields/of_Students_at_Billing_Activation__c.field-meta.xml
<CustomField>
    <fullName>of_Students_at_Billing_Activation__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
of_Students_at_Bill_Activation_Stamp__c,
IF(RecordType.Name = &apos;Billing&apos;,
IF(NOT(ISBLANK(of_Students_at_Bill_Activation_Stamp__c)),
of_Students_at_Bill_Activation_Stamp__c,
Account__r.School_Object__r.of_Students_at_Billing_Activation__c ),NULL)
)</formula>
    <label># of Students at Billing Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>