force-app/main/default/objects/Onboarding_Attempt__c/fields/Onboarding_Attempt_Status_New__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Attempt_Status_New__c</fullName>
    <label>Onboarding Attempt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Attempt_Status</valueSetName>
    </valueSet>
</CustomField>