force-app/main/default/objects/Onboarding_Attempt__c/fields/Onboarding_Path__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Path__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
TEXT(Onboarding_Path_Stamp__c),
IF(NOT(ISBLANK(TEXT(  Onboarding_Path_Stamp__c   ))),
TEXT(Onboarding_Path_Stamp__c ),
 TEXT(Combined_Funnel__r.Onboarding_Path__c)  )
)</formula>
    <label>Onboarding Path</label>
    <type>Text</type>
</CustomField>