force-app/main/default/objects/Onboarding_Attempt__c/fields/Onboarding_Path_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Path_Stamp__c</fullName>
    <label>Onboarding Path - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Path</valueSetName>
    </valueSet>
</CustomField>