force-app/main/default/objects/Onboarding_Attempt__c/fields/Onboarding_Training_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Training_Call_Completed__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;SaaS&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        Onboarding_Training_Call_Compl_Stamp__c,
        IF(
            NOT(ISBLANK(Onboarding_Training_Call_Compl_Stamp__c)),
            Onboarding_Training_Call_Compl_Stamp__c,
            Combined_Funnel__r.Reference_SaaS_Training_Call_Completed__c
        )
    ),
    NULL
)</formula>
    <label>Onboarding Training Call Completed</label>
    <type>Date</type>
</CustomField>