force-app/main/default/objects/Onboarding_Attempt__c/fields/Onboarding_Training_Call_Sched_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Training_Call_Sched_Stamp__c</fullName>
    <label>Onboarding Training Call Sched - Stamp</label>
    <type>Date</type>
</CustomField>