force-app/main/default/objects/Onboarding_Attempt__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Onboarding Attempts</relationshipLabel>
    <relationshipName>Onboarding_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>