force-app/main/default/objects/Onboarding_Attempt__c/fields/Opportunity_CW_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_CW_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Opportunity CW Date</label>
    <type>Date</type>
</CustomField>