force-app/main/default/objects/Onboarding_Attempt__c/fields/Related_Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Payer_Account__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
Related_Payer_Account_Stamp__r.Name,
IF(NOT(ISBLANK( Related_Payer_Account_Stamp__r.Name )),
Related_Payer_Account_Stamp__r.Name,
 Combined_Funnel__r.Account__r.Name )
)</formula>
    <label>Related Payer Account</label>
    <type>Text</type>
</CustomField>