force-app/main/default/objects/Onboarding_Attempt__c/fields/Related_Payer_Account_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Related_Payer_Account_Stamp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Payer Account - Stamp</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Onboarding Attempts (Related Payer Account - Stamp)</relationshipLabel>
    <relationshipName>Onboarding_Attempts1</relationshipName>
    <type>Lookup</type>
</CustomField>