force-app/main/default/objects/Onboarding_Attempt__c/fields/Related_Payer_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Payer_Account_Type__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
TEXT(Related_Payer_Account_Type_Stamp__c),
IF(NOT(ISBLANK(TEXT(  Related_Payer_Account_Type_Stamp__c   ))),
TEXT(Related_Payer_Account_Type_Stamp__c),
TEXT( Related_Payer_Account_Stamp__r.Type ) )
)</formula>
    <label>Related Payer Account Type</label>
    <type>Text</type>
</CustomField>