force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Activation_Date__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;SaaS&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        SaaS_Activation_Date_Stamp__c,
        IF(
            NOT(ISBLANK(SaaS_Activation_Date_Stamp__c)),
            SaaS_Activation_Date_Stamp__c,
            DATEVALUE(Account__r.School_Object__r.SaaS_Activation_Date_2024__c)
        )
    ),
    NULL
)</formula>
    <label>SaaS Activation Date</label>
    <type>Date</type>
</CustomField>