force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Activation_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Activation_Date_Stamp__c</fullName>
    <label>SaaS Activation Date - Stamp</label>
    <type>Date</type>
</CustomField>