force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Activation_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Activation_Funnel_Stage__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;SaaS&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        TEXT(SaaS_Activation_Funnel_Stage_Stamp__c),
        IF(
            NOT(ISPICKVAL(SaaS_Activation_Funnel_Stage_Stamp__c, &quot;&quot;)),
            TEXT(SaaS_Activation_Funnel_Stage_Stamp__c),
            TEXT(Account__r.School_Object__r.SaaS_Activation_Funnel_Stage_2024__c)
        )
    ),
    &apos;&apos;
)</formula>
    <label>SaaS Activation Funnel Stage</label>
    <type>Text</type>
</CustomField>