force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Activation_Funnel_Stage_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Activation_Funnel_Stage_Stamp__c</fullName>
    <label>SaaS Activation Funnel Stage - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NEW_SaaS_Activation_Funnel_Stage</valueSetName>
    </valueSet>
</CustomField>