force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Activation_Override__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Activation_Override__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;SaaS&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        SaaS_Activation_Override_Stamp__c,
        IF(
            NOT(ISBLANK(SaaS_Activation_Override_Stamp__c)),
            SaaS_Activation_Override_Stamp__c,
            Combined_Funnel__r.SaaS_Activation_Override__c
        )
    ),
    &apos;&apos;
)</formula>
    <label>SaaS Activation Override</label>
    <type>Text</type>
</CustomField>