force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Activation_Override_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Activation_Override_Stamp__c</fullName>
    <label>SaaS Activation Override - Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>