force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Adding_Parents_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Adding_Parents_Stage_Met_Date__c</fullName>
    <formula>IF(
ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Closed&quot;) || ISPICKVAL(Onboarding_Attempt_Status_New__c , &quot;Canceled&quot;),
SaaS_Adding_Parents_Stage_Met_Stamp__c,
IF(
NOT(ISBLANK(SaaS_Adding_Parents_Stage_Met_Stamp__c)),
SaaS_Adding_Parents_Stage_Met_Stamp__c,
 DATEVALUE(Account__r.School_Object__r.SaaS_Adding_Parents_Stage_Met_Date__c)  
)
)</formula>
    <label>SaaS Adding Parents Stage Met Date</label>
    <type>Date</type>
</CustomField>