force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Adding_Parents_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Adding_Parents_Stage_Met_Stamp__c</fullName>
    <label>SaaS Adding Parents Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>