force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Adding_Staff_Stage_Met_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Adding_Staff_Stage_Met_Date_Stamp__c</fullName>
    <label>SaaS Adding Staff Stage Met Date - Stamp</label>
    <type>Date</type>
</CustomField>