force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Funnel_Start_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Funnel_Start_Date_Stamp__c</fullName>
    <label>SaaS Funnel Start Date - Stamp</label>
    <type>Date</type>
</CustomField>