force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Logging_Actv_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Logging_Actv_Stage_Met_Stamp__c</fullName>
    <label>SaaS Logging Actv Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>