force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Onboarding_Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Onboarding_Eligible_Date__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;SaaS&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        SaaS_Onboarding_Eligible_Date_Stamp__c,
        IF(
            NOT(ISBLANK(SaaS_Onboarding_Eligible_Date_Stamp__c)),
            SaaS_Onboarding_Eligible_Date_Stamp__c,
            Account__r.School_Object__r.SaaS_Onboarding_Eligible_Date__c
        )
    ),
    NULL
)</formula>
    <label>SaaS Onboarding Eligible Date</label>
    <type>Date</type>
</CustomField>