force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Onboarding_Eligible_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Onboarding_Eligible_Date_Stamp__c</fullName>
    <label>SaaS Onboarding Eligible Date - Stamp</label>
    <type>Date</type>
</CustomField>