force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Override_Approved_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Override_Approved_by_Manager__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;SaaS&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        TEXT(SaaS_Override_Approved_by_Mgr_Stamp__c),
        IF(
            NOT(ISPICKVAL(SaaS_Override_Approved_by_Mgr_Stamp__c, &quot;&quot;)),
            TEXT(SaaS_Override_Approved_by_Mgr_Stamp__c),
            TEXT(Combined_Funnel__r.SaaS_Override_Approved_by_Manager__c)
        )
    ),
    &apos;&apos;
)</formula>
    <label>SaaS Override Approved by Manager</label>
    <type>Text</type>
</CustomField>