force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Override_Reason_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Override_Reason_Stamp__c</fullName>
    <label>SaaS Override Reason - Stamp</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>