force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Override_Reasoning_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Override_Reasoning_Stamp__c</fullName>
    <label>SaaS Override Reasoning - Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low SES - Parent Adoption</fullName>
            </value>
            <value>
                <fullName>High Number of Non-Target Students</fullName>
            </value>
            <value>
                <fullName>Large Number of Active Students Not Attending Regularly</fullName>
            </value>
            <value>
                <fullName>Parents Activated Threshold Met, Parents Added Not Met</fullName>
            </value>
            <value>
                <fullName>Backend Management Only (SaaS)</fullName>
            </value>
            <value>
                <fullName>Customer Not Using Attendance</fullName>
            </value>
            <value>
                <fullName>Customer Not Using Messaging/Activities</fullName>
            </value>
            <value>
                <fullName>Gov: Attendance (No Integration)</fullName>
            </value>
            <value>
                <fullName>Other (Must Provide Context)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>