force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Parents_Signing_Up_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Parents_Signing_Up_Stage_Met_Date__c</fullName>
    <formula>IF(
    RecordType.Name = &apos;SaaS&apos;,
    IF(
        OR(
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Closed&quot;), 
            ISPICKVAL(Onboarding_Attempt_Status_New__c, &quot;Canceled&quot;)
        ),
        SaaS_Parents_Signing_Up_Stge_Met_Stamp__c,
        IF(
            NOT(ISBLANK(SaaS_Parents_Signing_Up_Stge_Met_Stamp__c)),
            SaaS_Parents_Signing_Up_Stge_Met_Stamp__c,
            DATEVALUE(Account__r.School_Object__r.SaaS_Parents_Signing_Up_Stage_Met_Date__c)
        )
    ),
    NULL
)</formula>
    <label>SaaS Parents Signing Up Stage Met Date</label>
    <type>Date</type>
</CustomField>