force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Parents_Signing_Up_Stge_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Parents_Signing_Up_Stge_Met_Stamp__c</fullName>
    <label>SaaS Parents Signing Up Stge Met - Stamp</label>
    <type>Date</type>
</CustomField>