force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Staff_Logging_In_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Staff_Logging_In_Stage_Met_Stamp__c</fullName>
    <label>SaaS Staff Logging In Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>