force-app/main/default/objects/Onboarding_Attempt__c/fields/SaaS_Tracking_Attennd_Stage_Met_Stamp__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Tracking_Attennd_Stage_Met_Stamp__c</fullName>
    <label>SaaS Tracking Attennd Stage Met - Stamp</label>
    <type>Date</type>
</CustomField>