force-app/main/default/objects/Onboarding_Attempt__c/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <label>Billing</label>
</RecordType>