force-app/main/default/objects/Onboarding_Attempt__c/recordTypes/SaaS.recordType-meta.xml
<RecordType>
    <fullName>SaaS</fullName>
    <active>true</active>
    <label>SaaS</label>
</RecordType>